# HelloCV

./: README.md
CryptoTool/: CMakeLists.txt
CryptoTool/include/: Crypto.hpp  FileHandler.hpp  Menu.hpp
CryptoTool/src/: Crypto.cpp  FileHandler.cpp  Menu.cpp  main.cpp
OpenCV_Project/: CMakeLists.txt  redlighttest.cpp
